<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView android:src="@drawable/text_light_white"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/text_logo_margin"
                   android:layout_marginBottom="@dimen/text_logo_margin"
                   android:layout_gravity="center_horizontal" />

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/alertColor"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/edit_text_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/dont_remeber_password"
                  android:layout_marginTop="10dp"
                  android:textSize="18dp"
                  android:onClick="goToResetPasswordActivity"
                  android:layout_marginBottom="10dp"/>


        <Button android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/lightTextColor"
                android:background="@drawable/round_button_background_white"
                android:onClick="logUser"
                android:text="@string/login"/>

        <TextView android:id="@+id/link_signup"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/no_account"
                  android:onClick="goToSignupActivity"
                  android:gravity="center"
                  android:textSize="16dp"/>

    </LinearLayout>
</ScrollView>