<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView android:src="@drawable/text_light_white"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/text_logo_margin"
                   android:layout_marginBottom="@dimen/text_logo_margin"
                   android:layout_gravity="center_horizontal" />

        <!--  Name Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_input_field_with_border"
                android:padding="@dimen/text_input_field_bordered_padding"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/name_edit_text"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:textColor="@color/buttonCorner"
                      android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_input_field_with_border"
                android:padding="@dimen/text_input_field_bordered_padding"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/email_edit_text"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/buttonCorner"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_input_field_with_border"
                android:padding="@dimen/text_input_field_bordered_padding"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/password_edit_text"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:textColor="@color/buttonCorner"
                      android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="8dp"
                      android:layout_marginBottom="8dp"
                      android:background="@drawable/input_field_error_background"
                      android:weightSum="2" android:id="@+id/genderSelectionLayout">

            <TextView android:id="@+id/femaleGenderSelector"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/woman"
                      android:gravity="center"
                      android:textColor="@color/buttonCorner"
                      android:padding="@dimen/segment_selection_padding"
                      android:onClick="femaleSegmentSelected"
                      android:background="@drawable/unselected_left_segment"/>

            <TextView android:id="@+id/maleGenderSelector"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/man"
                      android:gravity="center"
                      android:textColor="@color/buttonCorner"
                      android:padding="@dimen/segment_selection_padding"
                      android:onClick="maleSegmentSelected"
                      android:background="@drawable/unselected_right_segment"/>

        </LinearLayout>


        <Button android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/lightTextColor"
                android:background="@drawable/round_button_background"
                android:onClick="registerUser"
                android:text="@string/create_account"/>


        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/already_a_member_login"
                  android:gravity="center"
                  android:onClick="goToLoginActivity"
                  android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>