<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/lightTextColor"
                  android:textSize="25dp"
                android:id="@+id/tv_message"
                  android:text="@string/forgot_password"/>

        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/alertColor"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" android:id="@+id/layout_email_text">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button android:id="@+id/button_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/lightTextColor"
                android:background="@drawable/round_button_background_white"
                android:onClick="resetPassword"
                android:text="@string/reset_password"/>


    </LinearLayout>
</ScrollView>