<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:layout_marginBottom="10dp">

        <ImageButton
                style="@style/backButtonStyle"
                android:onClick="exitActivity"/>


        <TextView
                android:text="@string/add_new_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize= "@dimen/standard_text_Size"/>

    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="@dimen/add_formulage_layout_weight_sum"
                  android:gravity="center_vertical">

        <TextView
                android:text="@string/execution_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="@dimen/add_formulage_first_layout_weight"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextDate"
                android:onClick="setDate"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:layout_weight="@dimen/add_formulage_second_layout_weight"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="@dimen/add_formulage_layout_weight_sum"
                  android:gravity="center_vertical">

        <TextView
                android:text="@string/test_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"/>

        <RelativeLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="4">

            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCompleteTextView"/>

            <ProgressBar android:id="@+id/progress_bar"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:indeterminate="true"
                         android:visibility="invisible"
                         android:indeterminateTintMode="src_atop"
                         android:layout_alignTop="@id/autoCompleteTextView"
                         android:layout_alignBottom="@id/autoCompleteTextView"
                         android:layout_alignRight="@id/autoCompleteTextView"
                         android:indeterminateTint="@color/subbuttonColor"/>

        </RelativeLayout>


    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="@dimen/add_formulage_layout_weight_sum"
                  android:gravity="center_vertical">

        <TextView
                android:text="@string/result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/add_formulage_first_layout_weight"
                android:id="@+id/textView5" />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/add_formulage_first_subsecond_layout_weight"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2" />
        <!--<Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/add_formulage_second_subsecond_layout_weight"
                android:id="@+id/spinner"/>-->
        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="@dimen/add_formulage_second_subsecond_layout_weight"
                  android:text="mg/l"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"

                  android:gravity="center_vertical">

        <TextView
                android:text="@string/notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/add_formulage_first_layout_weight"
                android:id="@+id/textView6"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:layout_weight="@dimen/add_formulage_second_layout_weight"
                android:visibility="invisible"/>


    </LinearLayout>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@color/edittextBackground"
            android:id="@+id/editText3"
            android:minLines="5"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:gravity="top"
    />

    <Button
            android:text="@string/tick"
            style="@style/smallButtonStyle"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:onClick="tmp"
    />


</LinearLayout>